--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,14 @@
-include.path=${php.global.include.path}
-php.version=PHP_53
-source.encoding=UTF-8
-src.dir=.
-tags.asp=false
-tags.short=true
-web.root=.
+browser.autorefresh.SL__Browsers_ChromeBrowser=true
+browser.autorefresh.SL__Browsers_webviewBrowser=true
+browser.highlightselection.SL__Browsers_ChromeBrowser=true
+browser.highlightselection.SL__Browsers_webviewBrowser=true
+config.folder=
+external.project.url=
+file.reference.singular-tests=tests
+file.reference.Web-singular=.
+files.encoding=UTF-8
+server=INTERNAL
+site.root.folder=${file.reference.Web-singular}
+start.file=index.html
+test.folder=${file.reference.singular-tests}
+web.context.root=/singular
